Adding Input component for staking process

--- a/src/components/Cards/styles.scss
+++ b/src/components/Cards/styles.scss
@@ -160,3 +160,11 @@
     margin-left: 4px;
     margin-bottom: -5px;
 }
+#staking-value {
+    font-size: 26px;
+    color: #ffdfbd;
+}
+#price-unit {
+    color: azure !important;
+    font-size: 14px;
+}
