updating staking form

--- a/src/components/Cards/styles.scss
+++ b/src/components/Cards/styles.scss
@@ -120,6 +120,10 @@
     margin-inline-end: 16px !important;
     border-radius: 16px !important;
 }
+.staking-button {
+    color: #fff !important;
+    width: 100%;
+}
 .warning-box {
     text-align: start;
     margin-top: 32px;
